# SCIA

./: .gitignore  AGENTS.md  README.md  REQUIREMENTS.md  after.json  base_schema.sql  coding_agent_instructions.md  migration.sql  pyproject.toml  test_base.json  test_modified.json
.github/: copilot-instructions.md
.github/workflows/: pylint.yml  pytest.yml
.scia/: snowflake.yaml.example
docs/: FOLDER_STRUCTURE.md  USAGE_V02.md
docs/design/: design.md
docs/examples/: v0.1_json_output.json  v0.2_json_with_impact.json  v0.2_markdown_with_impact.md
docs/requirements/roadmap/: plan_scia_roadmap_v02.md
docs/scenarios/: README.md  column_removal.md  type_changes.md
scia/cli/: main.py
scia/config/: __init__.py  connection.py
scia/core/: analyze.py  diff.py  impact.py  risk.py  rules.py  utils.py
scia/input/: __init__.py  resolver.py
scia/metadata/: snowflake.py
scia/models/: finding.py  schema.py
scia/output/: json.py  markdown.py
scia/sql/: ddl_parser.py  heuristics.py  parser.py
scia/warehouse/: __init__.py  base.py  databricks.py  postgres.py  redshift.py  snowflake.py
tests/: conftest.py  test_alter_parsing.py  test_analyze.py  test_cli_main.py  test_coverage_gap.py  test_ddl_parser.py  test_diff.py  test_input_resolver.py  test_output.py  test_risk.py  test_rules.py  test_snowflake_adapter.py  test_snowflake_inspector.py  test_sql_parser.py
tests/config/: test_connection.py
tests/core/: test_impact.py
tests/fixtures/: after_medium.json  before.json
tests/integration/: test_backward_compat.py  test_cli.py  test_cli_errors.py  test_edge_cases.py  test_graceful_degradation.py
tests/models/: test_extended_models.py
tests/output/: test_markdown_with_impact.py
tests/warehouse/: test_adapter_registry.py  test_snowflake_adapter.py  test_warehouse_abstraction.py
