[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scia"
version = "0.1.0"
description = "Deterministic SQL Change Impact Analyzer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "snowflake-connector-python>=3.0.0",
    "sqlglot>=20.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "PyYAML>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
scia = "scia.cli.main:main"

[tool.setuptools]
packages = ["scia", "scia.cli", "scia.config", "scia.core", "scia.input", "scia.metadata", "scia.models", "scia.output", "scia.sql", "scia.warehouse"]
